--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css","src/assets/css/frontend.css"
             ],
             "scripts": []
           },
