--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "styles": [
               "src/styles.css","src/assets/css/frontend.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/js/bootstrap-native-v4.js"]
           },
           "configurations": {
             "production": {
