--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css","src/assets/css/frontend.css"
             ],
-            "scripts": ["src/assets/js/bootstrap-native-v4.js"]
+            "scripts": [
+              "src/assets/js/bootstrap-native-v4.js"
+              ]
           },
           "configurations": {
             "production": {
