--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css","src/assets/css/frontend.css"
+              "src/styles.css","src/assets/css/frontend.css",
+              "../node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": [
               "src/assets/js/bootstrap-native-v4.js"
